2005-05-26  Rob Savoye  <rob@darkstar.welcomehome.org>

	* gameswf/gameswf_test_ogl.cpp (main): Initialize the LOD BIAS
	here, rather than in apply(). This gets rid of the global
	variable.
	* gameswf/gameswf_test_ogl.cpp (main): Don't initialize the
	log_callback unless verbose is specified. This improves the
	performance when not using -v, since the display function returns
	immediately.

2005-05-25  Rob Savoye  <rob@bertha.welcomehome.org>

	* macros/png.m4, sdl.m4: tweak so help output lines up.
	* configure.ac: Add enable options for DOM or xmlReader parsers,
	with DOM being the default.
	* configure, config.h.in, aclocal.m4: Regenerated.

2005-05-23  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_xmlsocket.cpp(anydata): Use our own environment
	when calling sub functions, and then be like George Bush, and nuke
	the environment.
	* gameswf/gameswf_xml.cpp: Enable the DOM parser by default, as
	the new xmlReader one has problems with gcc 3.x.

2005-05-21  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_xml.cpp (load): Use xmlReader API instead of
	lower-level DOM API to save memory.

2005-05-20  Rob Savoye  <rob@bertha.welcomehome.org>

	* Makefile.in, base/Makefile.in, geometry/Makefile.in,
	gameswf/Makefile.in: Add a "mudflap" target that rebuilds
	everything with mudflap enabled. Mudflap is the new GCC memory
	checker like Purify. Slow but thorough...
	* gameswf/gameswf_xml.cpp: Use DEBUG_MEMORY_ALLOCATION to
	optionally display memory allocation information. Set _name and
	_value to zero when instantiating. Explicitly delete _name and
	_value when destructing. Use char * rather than as_value or
	tu_string for an XMLNode name and value so we can track every
	byte better.
	* gameswf/gameswf_xml.h: Use char * rather than as_value or
	tu_string for an XMLNode name and value so we can track every byte
	better. Use DEBUG_MEMORY_ALLOCATION to optionally display memory
	allocation information.